[gd_scene load_steps=7 format=3 uid="uid://8us8h4r4ch8n"]

[ext_resource type="Script" uid="uid://bov23i2ta3b55" path="res://scripts/ice_poop.gd" id="1_cs5lg"]
[ext_resource type="Texture2D" uid="uid://dlm8sgwh3kl1y" path="res://assets/poop_munition_shape.png" id="2_43rrs"]
[ext_resource type="Texture2D" uid="uid://brboakuou00dx" path="res://assets/pickup_hotdog_background.png" id="2_wp1u6"]
[ext_resource type="Texture2D" uid="uid://dlemcjsfork8s" path="res://assets/icecube.png" id="3_cs5lg"]
[ext_resource type="Texture2D" uid="uid://bgkndxdsipool" path="res://assets/pickup_icecream_background.png" id="5_wp1u6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wp1u6"]
radius = 500.0

[node name="IcePoop" type="Node2D" node_paths=PackedStringArray("poop_body", "poop_area", "poop_color_sprite")]
script = ExtResource("1_cs5lg")
poop_body = NodePath("PoopBody")
poop_area = NodePath("PoopBody/PoopArea")
poop_color_sprite = NodePath("PoopBody/PoopSpriteColor")

[node name="PoopBody" type="StaticBody2D" parent="."]
position = Vector2(0, 100)
collision_layer = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PoopBody"]
polygon = PackedVector2Array(6, -28, 21, -17, 24, -8, 24, -2, 33, 0, 38, 7, 37, 12, 40, 17, 41, 23, 38, 28, 29, 33, 14, 34, -3, 33, -16, 31, -21, 26, -23, 21, -22, 18, -17, 15, -18, 11, -18, 5, -14, 2, -8, 1, -5, -2, -3, -7, 3, -13, 6, -16, 7, -20, 6, -24, 5, -27)

[node name="PoopSpriteColor" type="Sprite2D" parent="PoopBody"]
modulate = Color(1, 1, 1, 0.588235)
self_modulate = Color(0.545098, 0.180392, 0, 1)
scale = Vector2(0.04, 0.04)
texture = ExtResource("2_43rrs")

[node name="PoopSprite" type="Sprite2D" parent="PoopBody"]
scale = Vector2(0.03, 0.03)
texture = ExtResource("3_cs5lg")

[node name="PoopArea" type="Area2D" parent="PoopBody" groups=["ice"]]
collision_layer = 4
collision_mask = 25

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PoopBody/PoopArea"]
polygon = PackedVector2Array(6, -28, 21, -17, 24, -8, 24, -2, 33, 0, 38, 7, 37, 12, 40, 17, 41, 23, 38, 28, 29, 33, 14, 34, -3, 33, -16, 31, -21, 26, -23, 21, -22, 18, -17, 15, -18, 11, -18, 5, -14, 2, -8, 1, -5, -2, -3, -7, 3, -13, 6, -16, 7, -20, 6, -24, 5, -27)

[node name="Timer" type="Timer" parent="."]

[node name="IceExplosion" type="Sprite2D" parent="."]
visible = false
modulate = Color(0, 1, 1, 0.403922)
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_wp1u6")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 1000
texture = ExtResource("5_wp1u6")
lifetime_randomness = 0.5
emission_shape = 1
emission_sphere_radius = 128.0
gravity = Vector2(0, 0)
scale_amount_min = 0.02
scale_amount_max = 0.02
color = Color(0, 1, 1, 0.196078)

[node name="ExplosionArea" type="Area2D" parent="." groups=["ice"]]
collision_layer = 128
collision_mask = 25

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource("CircleShape2D_wp1u6")

[connection signal="area_entered" from="PoopBody/PoopArea" to="." method="_on_poop_area_area_entered"]
[connection signal="area_exited" from="PoopBody/PoopArea" to="." method="_on_poop_area_area_exited"]
[connection signal="area_entered" from="ExplosionArea" to="." method="_on_explosion_area_area_entered"]
[connection signal="area_exited" from="ExplosionArea" to="." method="_on_explosion_area_area_exited"]
